--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -18,9 +18,26 @@ jobs:
           paths: [frontend/node_modules]
           key: frontend-build
 
+  build-backend:
+    docker:
+      - image: circleci/node:13.8.0
+    steps:
+      - checkout
+      - restore_cache:
+          keys: [backend-build]
+      - run:
+          name: Build back-end
+          command: |
+            cd backend
+            npm install
+            npm run build
+      - save_cache:
+          paths: [backend/node_modules]
+          key: backend-build
+
 workflows:
   default:
     jobs:
       - build-frontend
-      
+      - build-backend
     
