--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -76,7 +76,7 @@ workflows:
       - build-backend
       - test-frontend:
           requires: [build-frontend]
-      - test-frontend:
+      - test-backend:
           requires: [build-backend]    
     
     
