--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -144,7 +144,7 @@ jobs:
           command: |
                 aws ec2 describe-instances \
                   --query 'Reservations[*].Instances[*].PublicIpAddress' \
-                  --filters "Name=tag:udapeople,Values=backend-${CIRCLE_WORKFLOW_ID:0:7}" \
+                  --filters "Name=tag:project,Values=udapeople" \
                   --output text >> .circleci/ansible/inventory.txt
                  cat .circleci/ansible/inventory.txt   
              
