--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -154,6 +154,35 @@ jobs:
             - project/.circleci/ansible/inventory.txt
             
       - destroy-environment
+      
+  configure-infrastructure:
+    docker:
+      - image: python:3.7-alpine3.11
+    steps:
+      - checkout
+      - add_ssh_keys:
+                fingerprints: ["57:c5:0b:72:5e:40:a5:e2:40:5b:67:b6:d7:80:f1:b3"]
+      - attach_workspace:
+                at: ~/
+      - run:
+              name: Install dependencies
+              command: |
+                       apk add --no-cache \
+                       python3 \
+                       py3-pip \
+                       && pip3 install --upgrade pip \
+                       && pip3 install \
+                       awscli \
+                       && rm -rf /var/cache/apk/*
+                       apk add --update ansible
+      - run:
+              name: Configure server
+              command: |
+                    cd .circleci/ansible
+                    ansible-playbook -i inventory.txt configure-server.yml
+                
+      - destroy-environment 
+      
               
 workflows:
   default:
@@ -174,5 +203,7 @@ workflows:
               branches:
                 only:
                   - master
+      - configure-infrastructure:
+          requires: [deploy-infrastructure]            
     
     
