--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -187,23 +187,23 @@ jobs:
 workflows:
   default:
     jobs:
-      - build-frontend
-      - build-backend
-      - test-frontend:
-          requires: [build-frontend]
-      - test-backend:
-          requires: [build-backend]    
-      - scan-backend:
-          requires: [build-backend]
-      - scan-frontend:
-          requires: [build-frontend]
-      - deploy-infrastructure:
-          requires: [test-frontend, test-backend, scan-frontend, scan-backend]
-          filters:
-              branches:
-                only:
-                  - master
+      #- build-frontend
+      #- build-backend
+      #- test-frontend:
+      #    requires: [build-frontend]
+      #- test-backend:
+      #    requires: [build-backend]    
+      #- scan-backend:
+      #    requires: [build-backend]
+      #- scan-frontend:
+      #    requires: [build-frontend]
+      #- deploy-infrastructure:
+      #   requires: [test-frontend, test-backend, scan-frontend, scan-backend]
+      #    filters:
+      #        branches:
+      #          only:
+      #            - master
       - configure-infrastructure:
-          requires: [deploy-infrastructure]            
+      #   requires: [deploy-infrastructure]            
     
     
