--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -203,7 +203,7 @@ workflows:
       #        branches:
       #          only:
       #            - master
-      - configure-infrastructure:
+      - configure-infrastructure
       #   requires: [deploy-infrastructure]            
     
     
