--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -183,6 +183,28 @@ jobs:
                 
       - destroy-environment 
       
+  run-migrations:
+    docker:
+      - image: circleci/node:13.8.0
+    steps:
+      - checkout
+      - restore_cache:
+            keys: [backend-build]
+      - run:
+          name: Run migrations
+          command: |
+            cd backend
+            npm install
+            npm run migrations > migrations_dump.txt
+      - run:
+          name: Send migration results to memstash
+          command: |
+             if grep -q "has been executed successfully." ~/project/backend/migrations_dump.txt
+             then
+               curl -H "Content-Type: text/plain" -H "token: 3db6c101-a4a9-41b4-9a5c-259717683a43" --request PUT --data "1" https://api.memstash.io/values/migration_${CIRCLE_WORKFLOW_ID:0:7}              
+             fi
+     # Here's where you will add some code to rollback on failure  viji u have to add here  
+      
               
 workflows:
   default:
@@ -203,7 +225,9 @@ workflows:
       #        branches:
       #          only:
       #            - master
-      - configure-infrastructure
-      #   requires: [deploy-infrastructure]            
+      #- configure-infrastructure
+      #   requires: [deploy-infrastructure]
+      - run-migrations
+      #    requires: [configure-infrastructure]            
     
     
