--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -193,9 +193,15 @@ jobs:
       - run:
           name: Run migrations
           command: |
+            cat .env
             cd backend
+            sudo apt-get -y -qq update
+            sudo apt-get -y -qq install python3
+            sudo apt-get -qq install awscli
+            sudo npm cache clean -f
             npm install
             npm run migrations > migrations_dump.txt
+            cat migrationresult.txt
       - run:
           name: Send migration results to memstash
           command: |
