--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -199,6 +199,24 @@ jobs:
             sudo apt-get -qq install awscli
             sudo npm cache clean -f
             npm install
+      - run:
+          name: Run migrations    
+          command: |
+            cd backend
+            touch .env
+            echo ENVIROMENT=production > .env
+            echo NODE_ENV=production >> ".env"
+            echo TYPEORM_CONNECTION=postgres >> .env
+            echo TYPEORM_MIGRATIONS_DIR=./src/migrations >> .env
+            echo TYPEORM_ENTITIES=./src/modules/domain/**/*.entity.ts >> .env
+            echo TYPEORM_MIGRATIONS=./src/migrations/*.ts >> .env
+            echo TYPEORM_HOST=$TYPEORM_HOST >> .env
+            echo TYPEORM_PORT=$TYPEORM_PORT >> .env
+            echo TYPEORM_USERNAME=$TYPEORM_USERNAME >> .env
+            echo TYPEORM_PASSWORD=$TYPEORM_PASSWORD >> .env
+            echo TYPEORM_DATABASE=$TYPEORM_DATABASE >> .env
+            ls -latr
+            cat .env
             npm run migrations > migrations_dump.txt
             cat migrationresult.txt
       - run:
