--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -206,7 +206,7 @@ jobs:
           command : | 
             cd ./backend     
             npm run migrations > migrations_dump.txt
-            cat migrationresult.txt
+            cat migrations_dump.txt
       - run:
           name: Send migration results to memstash
           command: |
