--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -193,18 +193,17 @@ jobs:
       - run:
           name: Link 
           command: |
-            cd ./backend
+            cd backend
             sudo apt-get -y -qq update
             sudo apt-get -y -qq install python3
             sudo apt-get -qq install awscli
             sudo npm cache clean -f
-            npm install
-            npm run build
             
       - run:
           name: Run migrations
           command : | 
-            cd ./backend     
+            cd  backend    
+            npm install
             npm run migrations > migrations_dump.txt
             cat migrations_dump.txt
       - run:
@@ -212,10 +211,11 @@ jobs:
           command: |
              if grep -q "has been executed successfully." ~/project/backend/migrations_dump.txt
              then
-               curl -H "Content-Type: text/plain" -H "token: 3db6c101-a4a9-41b4-9a5c-259717683a43" --request PUT --data "1" https://api.memstash.io/values/migration_${CIRCLE_WORKFLOW_ID:0:7}              
+              curl -H "Content-Type: text/plain" -H "token: 3db6c101-a4a9-41b4-9a5c-259717683a43" --request PUT --data "1" https://api.memstash.io/values/migration_${CIRCLE_WORKFLOW_ID:0:7}              
              fi
              
-      # - destroy-environment
+      # - destroy-environment:
+      #          workflow_id: ${CIRCLE_WORKFLOW_ID:0:7}
       
               
 workflows:
