--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -157,7 +157,8 @@ jobs:
           paths:
             - project/.circleci/ansible/inventory.txt
             
-      - destroy-environment
+      - destroy-environment:
+          workflow_id: "${CIRCLE_WORKFLOW_ID:0:7}"
       
   configure-infrastructure:
     docker:
@@ -185,7 +186,8 @@ jobs:
                     cd .circleci/ansible
                     ansible-playbook -i inventory.txt configure-server.yml
                 
-      - destroy-environment 
+      -- destroy-environment:
+          workflow_id: "${CIRCLE_WORKFLOW_ID:0:7}"    
       
   run-migrations:
     docker:
@@ -218,25 +220,25 @@ jobs:
 workflows:
  default:
     jobs:
-      #- build-frontend
-      #- build-backend
-      #- test-frontend:
-      #    requires: [build-frontend]
-      #- test-backend:
-      #    requires: [build-backend]    
-      #- scan-backend:
-      #    requires: [build-backend]
-      #- scan-frontend:
-      #    requires: [build-frontend]
-      #- deploy-infrastructure:
-      #   requires: [test-frontend, test-backend, scan-frontend, scan-backend]
-      #    filters:
-      #        branches:
-      #          only:
-      #            - master
-      #- configure-infrastructure
-      #   requires: [deploy-infrastructure]
+      - build-frontend
+      - build-backend
+      - test-frontend:
+          requires: [build-frontend]
+      - test-backend:
+          requires: [build-backend]    
+      - scan-backend:
+          requires: [build-backend]
+      - scan-frontend:
+          requires: [build-frontend]
+      - deploy-infrastructure:
+         requires: [test-frontend, test-backend, scan-frontend, scan-backend]
+          filters:
+              branches:
+                only:
+                  - master
+      - configure-infrastructure
+         requires: [deploy-infrastructure]
       - run-migrations
-      #    requires: [configure-infrastructure]            
+          requires: [configure-infrastructure]            
     
     
