--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -186,7 +186,7 @@ jobs:
                     cd .circleci/ansible
                     ansible-playbook -i inventory.txt configure-server.yml
                 
-      -- destroy-environment:
+      - destroy-environment:
           workflow_id: "${CIRCLE_WORKFLOW_ID:0:7}"    
       
   run-migrations:
@@ -231,14 +231,14 @@ workflows:
       - scan-frontend:
           requires: [build-frontend]
       - deploy-infrastructure:
-         requires: [test-frontend, test-backend, scan-frontend, scan-backend]
+          requires: [test-frontend, test-backend, scan-frontend, scan-backend]
           filters:
               branches:
                 only:
                   - master
-      - configure-infrastructure
-         requires: [deploy-infrastructure]
-      - run-migrations
+      - configure-infrastructure:
+          requires: [deploy-infrastructure]
+      - run-migrations:
           requires: [configure-infrastructure]            
     
     
