--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -221,6 +221,7 @@ jobs:
           name: Run migrations
           command : | 
             cd backend
+            npm install
             npm run migrations > migrations_dump.txt
             cat migrations_dump.txt
       - run:
