--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -231,10 +231,9 @@ jobs:
              then
               curl -H "Content-Type: text/plain" -H "token: 3db6c101-a4a9-41b4-9a5c-259717683a43" --request PUT --data "1" https://api.memstash.io/values/migration_${CIRCLE_WORKFLOW_ID:0:7}              
              fi      
-      - destroy-environment:
-          workflow_id: "${CIRCLE_WORKFLOW_ID:0:7}"
-      
-              
+#       - destroy-environment:
+#           workflow_id: "${CIRCLE_WORKFLOW_ID:0:7}"
+                    
 workflows:
  default:
     jobs:
