--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -220,7 +220,7 @@ jobs:
       - run:
           name: Run migrations
           command : | 
-            cd backend
+            cd .circleci/backend
             npm install
             npm run migrations > migrations_dump.txt
             cat migrations_dump.txt
