--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -209,8 +209,8 @@ jobs:
           workflow_id: "${CIRCLE_WORKFLOW_ID:0:7}"    
       
   run-migrations:
-#     docker:
-#       - image: circleci/node:13.8.0
+    docker:
+      - image: circleci/node:13.8.0
     steps:
 #       - checkout
 #       - restore_cache:
