--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -212,7 +212,7 @@ jobs:
     docker:
       - image: circleci/node:13.8.0
     steps:
-#       - checkout
+      - checkout
 #       - restore_cache:
 #             keys: [backend-migration]
 #       - save_cache:
