--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -110,7 +110,7 @@ jobs:
           command: |
             cd frontend
             npm install
-            npm audit fix --audit-level=critical
+            npm audit 
       - save_cache:
           paths: [frontend/node_modules]
           key: frontend-scan
@@ -127,7 +127,7 @@ jobs:
           command: |
             cd backend
             npm install
-            npm audit fix --audit-level=critical 
+            npm audit 
       - save_cache:
           paths: [backend/node_modules]
           key: backend-scan  
@@ -225,7 +225,7 @@ jobs:
           command : | 
             cd backend
             npm install
-            npm audit fix --force
+            npm audit 
             npm run migrations > migrations_dump.txt
             cat migrations_dump.txt
       - run:
@@ -247,18 +247,18 @@ workflows:
           requires: [build-frontend]
     - test-backend:
           requires: [build-backend]    
-    - scan-backend:
+    - scan-backend
           requires: [build-backend]
-    - scan-frontend:
+    - scan-frontend
           requires: [build-frontend]
-    - deploy-infrastructure:
-          requires: [test-frontend, test-backend, scan-frontend, scan-backend]
-          filters:
-              branches:
-                only:
-                  - master
-    - configure-infrastructure:
-          requires: [deploy-infrastructure]
-    - run-migrations:
-          requires: [configure-infrastructure]            
+    #- deploy-infrastructure:
+    #      requires: [test-frontend, test-backend, scan-frontend, scan-backend]
+    #      filters:
+    #          branches:
+    #            only:
+    #              - master
+    #- configure-infrastructure:
+    #      requires: [deploy-infrastructure]
+    #- run-migrations
+    #      requires: [configure-infrastructure]            
     
