--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -110,6 +110,7 @@ jobs:
           command: |
             cd frontend
             npm install
+            npm start
             npm audit 
       - save_cache:
           paths: [frontend/node_modules]
