--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -110,7 +110,6 @@ jobs:
           command: |
             cd frontend
             npm install
-            npm update -g
             npm audit 
       - save_cache:
           paths: [frontend/node_modules]
@@ -128,7 +127,7 @@ jobs:
           command: |
             cd backend
             npm install 
-            npm update -g
+            ncu -u
             npm audit 
       - save_cache:
           paths: [backend/node_modules]
