--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -127,8 +127,7 @@ jobs:
           command: |
             cd backend
             npm install 
-            npm config set prefix /usr/local
-            ncu -u
+            npm update
             npm audit 
       - save_cache:
           paths: [backend/node_modules]
