--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -11,6 +11,7 @@ commands:
           name: Destroy environments
           when: on_fail
           command: |
+            cd backend
             echo "Destroying environment: <<parameters.workflow_id>> "
             aws cloudformation delete-stack --stack-name udapeople-backend-<<parameters.workflow_id>>
             aws cloudformation delete-stack --stack-name udapeople-frontend-<<parameters.workflow_id>>
@@ -110,7 +111,6 @@ jobs:
           command: |
             cd frontend
             npm install
-            npm audit fix --force
       - save_cache:
           paths: [frontend/node_modules]
           key: frontend-scan
@@ -127,7 +127,7 @@ jobs:
           command: |
             cd backend
             npm install
-            npm audit fix --force
+            npm audit fix --audit-level=critical --force
       - save_cache:
           paths: [backend/node_modules]
           key: backend-scan  
@@ -225,7 +225,6 @@ jobs:
           command : | 
             cd backend
             npm install
-            npm audit 
             npm run migrations > migrations_dump.txt
             cat migrations_dump.txt
       - run:
