--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -231,28 +231,80 @@ jobs:
              fi      
       - destroy-environment:
            workflow_id: "${CIRCLE_WORKFLOW_ID:0:7}"
+           
+  deploy-frontend:
+    docker:
+      - image: circleci/node:13.8.0
+    steps:
+      - checkout
+      - run:
+            name: Install dependencies
+            command: |
+              sudo apt-get -y -qq update
+              sudo apt-get -qq install awscli
+      - attach_workspace:
+            at: .    
+      - run:
+            # MUST be http not https
+            name: Get backend url
+            command: |
+              cd frontend
+              VIJIS_IP=$(aws ec2 describe-instances \
+                  --query 'Reservations[*].Instances[*].PublicIpAddress' \
+                  --filters "Name=tag:project,Values=udapeople" \
+                  --output text)
+              export API_URL="http://${VIJIS_IP}:3030"
+              echo "API_URL = ${API_URL}"
+              echo API_URL="http://${VIJIS_IP}:3030" >> frontend/.env
+              cat frontend/.env   
+      - run:
+            name: Deploy frontend objects
+            command: |
+              cd frontend
+              export API_URL=$(cat frontend/.env)
+              cat API_URL
+              npm install
+              npm run build
+              tar -czvf artifact-"${CIRCLE_WORKFLOW_ID:0:7}".tar.gz dist
+              aws s3 cp dist s3://udapeople-${CIRCLE_WORKFLOW_ID:0:7} --recursive
+              
+              s3Buck=$(echo "udapeople-${CIRCLE_WORKFLOW_ID:0:7}")
+              #aws s3 sync dist s3://$s3Bucket/
+              URL02=("http://$s3Buck.s3-website-eu-east-1.amazonaws.com")
+              curl -H "Content-Type: text/plain" -H "token: 3db6c101-a4a9-41b4-9a5c-259717683a43" --request PUT --data "$URL02" https://api.memstash.io/values/s3Buck_${CIRCLE_WORKFLOW_ID}
+            
+      - persist_to_workspace:
+            root: .
+            paths:
+              - frontend/dist
+      #- destroy-environment
+      
+           
                     
 workflows:
  default:
     jobs:
-    - build-frontend
-    - build-backend
-    - test-frontend:
-          requires: [build-frontend]
-    - test-backend:
-          requires: [build-backend]    
-    - scan-backend:
-          requires: [build-backend]
-    - scan-frontend:
-          requires: [build-frontend]
-    - deploy-infrastructure:
-          requires: [test-frontend, test-backend, scan-frontend, scan-backend]
-          filters:
-              branches:
-                only:
-                  - master
-    - configure-infrastructure:
-          requires: [deploy-infrastructure]
-    - run-migrations:
-          requires: [configure-infrastructure]            
-    
+    #- build-frontend
+    #- build-backend
+    #- test-frontend:
+    #      requires: [build-frontend]
+    #- test-backend:
+    #      requires: [build-backend]    
+    #- scan-backend:
+    #      requires: [build-backend]
+    #- scan-frontend:
+    #      requires: [build-frontend]
+    #- deploy-infrastructure:
+    #      requires: [test-frontend, test-backend, scan-frontend, scan-backend]
+    #      filters:
+    #          branches:
+    #            only:
+    #              - master
+    #- configure-infrastructure:
+    #      requires: [deploy-infrastructure]
+    #- run-migrations:
+    #      requires: [configure-infrastructure]    
+    - deploy-frontend
+    #     requires: [run-migrations]
+    #- deploy-backend:
+    #      requires: [run-migrations]
