--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -255,7 +255,7 @@ jobs:
                   --output text)
               export API_URL="http://${VIJIS_IP}:3030"
               echo "API_URL = ${API_URL}"
-              echo API_URL="http://${VIJIS_IP}:3030" >> frontend/.env
+              echo API_URL="http://${VIJIS_IP}:3030" > frontend/.env
               cat frontend/.env   
       - run:
             name: Deploy frontend objects
