--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -260,8 +260,7 @@ jobs:
             name: Deploy frontend objects
             command: |
               cd frontend
-              export API_URL=$(cat apiu.txt)
-              cat API_URL
+              echo API_URL
               npm install
               npm run build
               tar -czvf artifact-"${CIRCLE_WORKFLOW_ID:0:7}".tar.gz dist
