--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -240,10 +240,8 @@ jobs:
       - run:
             name: Install dependencies
             command: |
-              apk add --no-cache curl
-              apk add --no-cache --upgrade bash
-              apk add --no-cache --update npm
-              pip3 install awscli
+              sudo apt-get -y -qq update
+              sudo apt-get -qq install awscli
       - attach_workspace:
             at: .    
       - run:
