--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -252,8 +252,8 @@ jobs:
                 --query 'Reservations[*].Instances[*].PublicIpAddress' \
                 --filters "Name=tag:project,Values=udapeople" \
                 --output text)
-              echo "$VIJI_IP"   
-              export API_URL="http://$VIJIS_IP:3030"
+              echo ${VIJI_IP}
+              export API_URL="http://${VIJIS_IP}:3030"
               echo API_URL=${API_URL}
               cd frontend
               npm install
@@ -262,7 +262,7 @@ jobs:
       - run:
             name: Deploy frontend objects
             command: |
-              tar -czvf artifact-"${CIRCLE_WORKFLOW_ID:0:7}".tar.gz dist
+             
               aws s3 cp dist s3://udapeople-${CIRCLE_WORKFLOW_ID:0:7} --recursive
              
               s3Buck=$(echo "udapeople-${CIRCLE_WORKFLOW_ID:0:7}")
